<resources>
    <string name="app_name">东融VR</string>
    <string name="initialize">初始化界面</string>
    <string name="login_user">手机号码</string>
    <string name="login_psd">密码</string>
    <string name="forget_psd">忘记密码</string>
    <string name="not_account">没有账号么？</string>
    <string name="phone_canot_empty">手机号码不能为空</string>
    <string name="psd_canot_empty">密码不能为空</string>
    <string name="txt_message">消息</string>
    <string name="txt_life">生活</string>
    <string name="txt_dynamic">动态</string>
    <string name="txt_my">我的</string>

    <!--下拉刷新-->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="txt_myfans">我的粉丝</string>
    <string name="txt_vr">VR支付</string>
    <string name="txt_vrch">VRCH结算</string>
    <string name="txt_members">会员充值</string>
    <string name="txt_circulation">流通交易</string>
    <string name="my_news">我的信息</string>
    <string name="txt_real_name_authentication">实名认证</string>
    <string name="txt_my_code">我的二维码</string>
    <string name="txt_register">会员注册</string>
    <string name="txt_help_center">帮助中心</string>
    <string name="txt_my_fragment">我的</string>
    <string name="my_userinfo">个人信息</string>
    <string name="txt_gender">性别</string>
    <string name="txt_account">用户账号</string>
    <string name="txt_nickname">昵称</string>
    <string name="register">注册</string>
    <string name="get_code">获取</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="account_message">账户信息</string>
    <string name="get_address">收货地址</string>
    <string name="man_tip">个性签名</string>
    <string name="fans_point">粉丝接入图</string>
    <string name="txt_refresh">刷新</string>
    <string name="help_doc">帮助文档</string>
    <string name="work_order">工单</string>
    <string name="online_service">在线客服</string>
    <string name="help_center">帮助中心</string>
    <string name="tip_setting">个性签名设置</string>

    <string name="fans_sum">总粉丝</string>
    <string name="fans_share">分享粉丝</string>
    <string name="fans_shared">共享粉丝</string>
    <string name="fans_Community">社群粉丝</string>
    <string name="hot_request">热门问题</string>
    <string name="input_your_request">请输入你要搜索的问题</string>
    <string name="current">流通交易</string>
    <string name="current_trading">流通转账</string>
    <string name="Current_investment">流通投资</string>
    <string name="Convert_trading">转换交易</string>
    <string name="trading_floor">交易大厅</string>
    <string name="my_message">我的信息</string>
    <string name="zhifu_account">支付账户</string>
    <string name="real_name_cant_empty">真实姓名不能为空！</string>
    <string name="about_me">关于我们</string>
    <string name="vrch_out">VRCH转出</string>
    <string name="vrch_in">VRCH转入</string>
    <string name="txt_jinge">金额</string>
    <string name="input_num">请输入金额数量</string>
</resources>
