<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zhou.com.xmkj.ui.activity.FansActivity">

    <include layout="@layout/layout_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_size_16"
        android:background="@drawable/bg_fans">

        <TextView
            android:id="@+id/tvSumFans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_size_8"
            android:text="@string/fans_sum"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvShardFans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_size_8"
            android:text="@string/fans_share"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvGongXiang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_size_8"
            android:text="@string/fans_shared"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvCommunity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_size_8"
            android:text="@string/fans_Community"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
