<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    tools:context="zhou.com.xmkj.ui.activity.LoginActivity">

    <include layout="@layout/layout_header" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_size_20"
        android:src="@drawable/logo_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llHead" />

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_size_12"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/common_text_color"
        android:textSize="@dimen/sp_size_20"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <RelativeLayout
        android:id="@+id/rlUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_size_22"
        android:paddingLeft="@dimen/dp_size_30"
        android:paddingRight="@dimen/dp_size_30"
        app:layout_constraintTop_toBottomOf="@+id/tvLogo">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_1" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_size_22"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/login_user"
            android:maxLines="1"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/ivLogin"
            android:layout_marginTop="@dimen/dp_size_14"
            android:background="@color/common_divider_narrow" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlPsd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_size_16"
        android:paddingLeft="@dimen/dp_size_30"
        android:paddingRight="@dimen/dp_size_30"
        app:layout_constraintTop_toBottomOf="@+id/rlUser">

        <ImageView
            android:id="@+id/ivPsd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_2" />

        <EditText
            android:id="@+id/etPsd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_size_22"
            android:layout_toLeftOf="@+id/ivLook"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/login_psd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/ivLook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/login_3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/ivPsd"
            android:layout_marginTop="@dimen/dp_size_14"
            android:background="@color/common_divider_narrow" />

    </RelativeLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_size_30"
        android:layout_marginRight="@dimen/dp_size_30"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@drawable/bg_login"
        android:text="登录"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_size_16"
        app:layout_constraintTop_toBottomOf="@+id/rlPsd" />

    <TextView
        android:id="@+id/tvForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_size_30"
        android:layout_marginTop="@dimen/dp_size_5"
        android:text="@string/forget_psd"
        android:textColor="@color/common_text_color"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_size_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForget">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_account" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv1"
            android:text="注册一个吧"
            android:textColor="@color/common_text_color" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
